# digital-objects-network

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  README.md  SKILL.md  build-stamp.rs  install.ps1  install.sh  justfile  mprocs.agents.yaml  mprocs.demo.yaml  mprocs.remote.yaml  mprocs.web.yaml  mprocs.yaml  render.yaml  rust-toolchain.toml  scratch
.github/: release-notes.md.tpl
a2a-agent/: Containerfile  README.md  __main__.py  agent_executor.py  pyproject.toml  test_client.py
agents/: .env.example  .gitignore  README.md  pyproject.toml
agents/auctioneer/: __main__.py  agent_executor.py
agents/concierge/: __main__.py  agent_executor.py  peer_client.py  pyproject.toml
agents/craftsmith/: __main__.py  agent_executor.py  pyproject.toml
agents/lumberjack/: __main__.py  agent_executor.py  pyproject.toml
agents/scripts/: bootstrap_dobjds.sh  docker_entrypoint.sh  ping_dobjds.sh  run_all.sh  skill_invoke.py  test_client.py
agents/shared/: a2a_helpers.py  beeai_helpers.py  brain_hub.py  dobj_verify.py  dobjd_client.py  llm_brain.py  peer_tools.py  registry.py
agents/stonemason/: __main__.py  agent_executor.py  pyproject.toml
app-gui/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
app-gui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app-gui/src-tauri/examples/: gen_ids.rs
app-gui/src-tauri/src/: app_paths.rs  bootstrap.rs  contract_codegen.rs  id_codegen.rs  lib.rs  mcp.rs  objects_watcher.rs  progress.rs  run_action.rs  settings.rs  spec.rs  state.rs  types.rs
app-gui/src-tauri/src/commands/: cpu.rs  dobj.rs  feed.rs  mod.rs  objects.rs  proof.rs  sdk.rs  settings.rs  things.rs  utils.rs
app-gui/src-tauri/src/commands/sdk/: bootstrap.rs  engine.rs  mapping.rs  mod.rs  naming.rs  object_store.rs  progress.rs  relayer_client.rs  run_action.rs  runtime.rs  synchronizer_client.rs
app-gui/src-tauri/src/cpu/: store.rs
app-gui/src-tauri/src/objects/: api.rs  mod.rs  paths.rs  record.rs  watcher.rs
app-gui/src-tauri/src/sdk/: bootstrap.rs  engine.rs  mod.rs  object_store.rs  progress.rs  relayer_client.rs  run_action.rs  runtime.rs  synchronizer_client.rs
archiver/: Cargo.toml  README.md
archiver/src/: api.rs  main.rs  node.rs
cli/: Cargo.toml  README.md  build.rs
cli/src/: client.rs  commands.rs  daemon.rs  main.rs  types.rs  update.rs
common/: Cargo.toml
common/src/: blob_codec.rs  groth.rs  lib.rs  payload.rs  proof.rs  shrink.rs  test_state.rs
craft-actions/: Cargo.toml
craft-actions/src/: actions.rs  grounding.rs  intro.rs  lib.rs  tx_build.rs
craft-actions/tests/: end_to_end.rs
craft-guest/: Cargo.toml  README.md  rust-toolchain.toml
craft-guest/src/: main.rs
craft_sdk/: Cargo.toml  NOTES.md
craft_sdk/src/: lib.rs  pexe.rs  tests.rs
craftlib/: Cargo.toml
craftlib/src/: lib.rs  sdk.rs
craftlib/src/predicates/: craftlib.podlang  mod.rs
craftlib/src/scenario/: mod.rs  test_sdk.rs
dobj/: Cargo.toml
dobj/src/: client.rs  commands.rs  daemon.rs  main.rs  types.rs
dobjd/: Cargo.toml  README.md  build.rs
dobjd/src/: error.rs  events.rs  main.rs  mcp.rs  progress.rs  runs.rs  state.rs  watcher.rs
dobjd/src/routes/: actions.rs  classes.rs  events.rs  health.rs  inventory.rs  mod.rs  objects.rs  settings.rs  state.rs
driver/: Cargo.toml  README.md
driver/examples/: all_actions_e2e.rs  find_log_e2e.rs
driver/src/: actions.rs  builtin.rs  catalog.rs  clients.rs  driver.rs  error.rs  execute.rs  lib.rs  object.rs  object_record.rs  object_store.rs  paths.rs  pexe_catalog.rs  qualified_name.rs  runtime.rs  settings.rs  store.rs  tests.rs  types.rs  warm.rs
driver/src/clients/: mod.rs  relayer_client.rs  synchronizer_client.rs
libs/driver/: Cargo.toml  README.md
libs/driver/src/: driver.rs  execute.rs  lib.rs  object_record.rs  object_store.rs  pexe_catalog.rs  settings.rs  tests.rs  types.rs  warm.rs
libs/driver/src/clients/: relayer_client.rs  synchronizer_client.rs
libs/intro-pods/lt-eq-u256-pod/: Cargo.toml
libs/pexe/: Cargo.toml  README.md  build.rs
libs/pexe/src/: fixtures.rs  inspect.rs
libs/sdk/: Cargo.toml  README.md
libs/sdk/src/: error.rs  fmt_podlang.rs  lib.rs  tests.rs  utils.rs
libs/wire-types/: Cargo.toml
libs/wire-types/src/: lib.rs  relayer.rs  synchronizer.rs
lt_eq_u256_pod/: Cargo.toml
mcp/: Cargo.toml  README.md
mcp/docs/: digital-objects.md  game-rules.md  instructions.md  object-lifecycle.md  podlang-reference.md
mcp/src/: driver_ops.rs  lib.rs  logging.rs  mock.rs  ops.rs  resources.rs  server.rs  types.rs
message-board/: .env.example  Cargo.toml  README.md
message-board/migrations/: 0001_init.sql
message-board/src/: api.rs  config.rs  db.rs  main.rs  types.rs
pexe/: Cargo.toml  README.md
pexe/src/: fixtures.rs  inspect.rs  lib.rs
pexe_minecraft/: Cargo.toml
pexe_minecraft/src/: lib.rs
plugin_host/: Cargo.toml
plugin_host/src/: lib.rs  recipes.rs  recorder.rs  runtime.rs
pod2utils/: Cargo.toml
pod2utils/src/: lib.rs  macros.rs  mockintro.rs
relayer/: .env.example  Cargo.toml  README.md
relayer/src/: api.rs  api_types.rs  auth.rs  config.rs  db.rs  eth.rs  main.rs  model.rs  time_utils.rs  worker.rs
synchronizer/: .env.example  Cargo.toml  README.md  build.rs
synchronizer/src/: api.rs  api_types.rs  app_db.rs  blob.rs  catchup.rs  config.rs  db.rs  endpoints.rs  gsr.rs  head.rs  lib.rs  main.rs  node.rs  proof.rs  state.rs  state_machine.rs  state_reader.rs  sync_db.rs  sync_loop.rs
synchronizer/src/clients/: common.rs  mod.rs
synchronizer/src/clients/beacon/: mod.rs  types.rs
synchronizer/tests/: bench_scaling.rs
txlib/: Cargo.toml  README.md
txlib-core/: Cargo.toml
txlib-core/src/: abi.rs  hash.rs  lib.rs  merkle.rs  merkle_store.rs  object.rs  tx.rs  value.rs
txlib/src/: lib.rs  replay.rs
txlib/src/examples/: mine_ore.podlang  mod.rs
txlib/src/predicates/: crafting_test.podlang  mod.rs  tx_events.podlang  txlib.podlang
wire-types/: Cargo.toml
wire-types/src/: lib.rs  relayer.rs  synchronizer.rs
(+397 files in other folders)
