[workspace]
members = [
    "app-gui/src-tauri",
    "common",
    "craft-actions",
    "craft-methods",
    "driver",
    "mcp",
    "synchronizer",
    "relayer",
    "txlib-core",
]
# Excluded from the workspace:
# - `craft-guest` is a risc0 zkVM guest binary that requires the risc0
#   toolchain (`rzup install`) and targets `riscv32im-risc0-zkvm-elf`.
#   It's its own one-crate workspace so the parent `cargo build` ignores
#   it. The future `craft-methods` crate (Phase 4) will build it via
#   `risc0-build::embed_methods`.
# - The rest are pre-risc0 crates that still depend on pod2 / plonky2 /
#   the old txlib. Will be rewritten in Phase 4.
exclude = [
    "craft-guest",
    "pod2utils",
    "txlib",
    "sdk",
    "pexe",
    "intro_pods/vdfpod",
    "intro_pods/lt_eq_u256_pod",
    "timelib",
]
resolver = "2"

[workspace.dependencies]
# Branch `next/2026-03-30.a`: Includes:
# - bump params wildcards to 9
pod2 = { git = "https://github.com/0xPARC/pod2", rev = "70cf88ddfe7df6597096191550d91dfde563b855", default-features = false, features = [
    "backend_plonky2",
    "disk_cache",
    "zk",
] }
plonky2 = { git = "https://github.com/0xPARC/plonky2.git", rev = "109d517d09c210ae4c2cee381d3e3fbc04aa3812" }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.143"
alloy = { version = "1.2.1", features = [
    "eips",
    "full",
    "json-rpc",
    "hyper", #
    "transport-http",
    "signer-local",
    "rpc-client",
    "rpc-types-beacon"
] }

# common
anyhow = "1.0.56"
itertools = "0.14.0"
dotenvy = "0.15.7"
hex = "0.4.3"
toml = "1.1.2"

# logging
env_logger = { version = "0.11" }
log = { version = "0.4.14", features = ["kv_unstable"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "env-filter",
    "fmt",
    "time",
] }
tracing-log = "0.1.1"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
rand = { version = "0.9.2", features = ["std_rng"] }
thiserror = "2.0.18"
