[workspace]
members = [
    "app-gui/src-tauri",
    "common",
    "driver",
    "pod2utils",
    "synchronizer",
    "relayer",
    "txlib",
    "sdk",
    "pexe",
    "intro_pods/vdfpod",
    "intro_pods/lt_eq_u256_pod",
    "mcp",
    "dobjd",
    "cli",
    "wire-types",
]
resolver = "2"

[workspace.dependencies]
# Branch next-2026-05-13
pod2 = { git = "https://github.com/0xPARC/pod2", rev = "8c6d2ae3cef69e73aa6dc82dc1a9ee62a70fabc5", default-features = false, features = [
    "backend_plonky2",
    "disk_cache",
    "zk",
] }
plonky2 = { git = "https://github.com/0xPARC/plonky2.git", rev = "109d517d09c210ae4c2cee381d3e3fbc04aa3812" }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.143"
alloy = { version = "1.2.1", features = [
    "eips",
    "full",
    "json-rpc",
    "hyper",            #
    "transport-http",
    "signer-local",
    "rpc-client",
    "rpc-types-beacon",
] }

# common
anyhow = "1.0.56"
itertools = "0.14.0"
dotenvy = "0.15.7"
hex = "0.4.3"
toml = "1.1.2"

# logging
env_logger = { version = "0.11" }
log = { version = "0.4.14", features = ["kv_unstable"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "env-filter",
    "fmt",
    "time",
] }
tracing-log = "0.1.1"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
rand = { version = "0.9.2", features = ["std_rng"] }
thiserror = "2.0.18"
wire-types = { path = "wire-types" }
