[project]
name = "bitcraft-a2a-demo"
version = "0.1.0"
description = "Multi-agent A2A demo: Concierge orchestrates Lumberjack, Stonemason, Craftsmith to deliver a bitcraft StonePick."
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk==1.0.1",
    "httpx>=0.28.1",
    "starlette>=0.46.2",
    "sse-starlette>=2.3.5",
    "uvicorn>=0.34.2",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "concierge", "lumberjack", "stonemason", "craftsmith"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
