[project]
name = "bitcraft-a2a-demo"
version = "0.1.0"
description = "Multi-agent A2A demo: Concierge orchestrates Lumberjack, Stonemason, Craftsmith to deliver a bitcraft StonePick."
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk==1.0.1",
    "httpx>=0.28.1",
    "starlette>=0.46.2",
    "sse-starlette>=2.3.5",
    "uvicorn>=0.34.2",
    # LLM brain — provider-agnostic via LiteLLM model strings.
    # Set LLM_MODEL=anthropic/claude-opus-4-7, gemini/gemini-2.5-flash,
    # openai/gpt-4o, ollama/llama3, vertex_ai/gemini-2.5-flash, etc.
    "litellm>=1.80",
    # Specialists (Lumberjack/Stonemason/Craftsmith) use LangChain.
    "langchain>=1.0",
    "langchain-litellm>=0.2",
    "langchain-mcp-adapters>=0.1",
    "langgraph>=1.0",
    # Concierge uses BeeAI Framework — RequirementAgent + ThinkTool +
    # ConditionalRequirement mirror the A2AWalkthrough healthcare
    # orchestrator. Shows off framework diversity inside one demo
    # (specialists in LangChain, orchestrator in BeeAI). We deliberately
    # do NOT pull the `[a2a]` extra: it pins a2a-sdk<1.0 which would
    # downgrade our specialists' SDK and break their protobuf wire
    # format. Custom Tool subclasses in shared/peer_tools.py wrap our
    # existing a2a-sdk 1.0.1 peer client instead.
    "beeai-framework>=0.1.80",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "concierge", "lumberjack", "stonemason", "craftsmith"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
