[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dobj"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
futures-util = "0.3"
libc = "0.2"
dirs = "6"
urlencoding = "2"
uuid = { version = "1.18.1", features = ["v4"] }
wire-types = { workspace = true }
