[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dobj"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
futures-util = "0.3"
dirs = "6"
urlencoding = "2"
uuid = { version = "1.18.1", features = ["v4"] }
wire-types = { workspace = true }

# `dobj update`: release tag ordering + tarball extraction.
semver = "1"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"

# POSIX signal + setsid used by the daemon subcommands. Unix-only —
# Windows uses the windows-sys equivalents below.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# OpenProcess / TerminateProcess for the Windows daemon path. The
# detached-spawn flags (DETACHED_PROCESS, CREATE_NEW_PROCESS_GROUP) also
# come from Win32_System_Threading.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
