[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
itertools = "0.14.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true }

# New stack
txlib-core = { path = "../txlib-core" }
risc0-zkvm = { version = "^3.0.5", default-features = false, features = ["std"] }
borsh = { version = "1.5", features = ["derive"] }
bincode = "1.3"

[features]
default = []
test-utils = []
