[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
pod2 = { workspace = true }
plonky2 = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
itertools = "0.14.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true  }
txlib = { path = "../txlib" }

[features]
default = []
test-utils = []
