[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
pod2 = { workspace = true }
plonky2 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
common = { path = "../common" }
sdk = { path = "../sdk" }
pod2utils = { path = "../pod2utils" }
txlib = { path = "../txlib" }
timelib = { path = "../timelib" }
vdfpod = { path = "../intro_pods/vdfpod" }
lt_eq_u256_pod = { path = "../intro_pods/lt_eq_u256_pod" }
synchronizer = { path = "../synchronizer" }
relayer = { path = "../relayer" }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
base64 = "0.22"
dirs = "6.0.0"

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
tempfile = "3"
