[package]
name = "driver"
version = "0.1.0"
edition = "2024"

# Headless library: local `.dobj` storage + HTTP clients for synchronizer and
# relayer + risc0 prover invocation. Used by app-gui (Phase 5) and any other
# host that wants to drive the craft-basics action set.

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
borsh = { version = "1.5", features = ["derive"] }
bincode = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
base64 = "0.22"
dirs = "6.0.0"
risc0-zkvm = { version = "^3.0.5" }

txlib-core = { path = "../txlib-core" }
craft-actions = { path = "../craft-actions" }
craft-methods = { path = "../craft-methods" }
common = { path = "../common" }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { workspace = true }
borsh = { version = "1.5", features = ["derive"] }
bincode = "1.3"
