[package]
name = "lt_eq_u256_pod"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
itertools.workspace = true
pod2 = { workspace = true }
plonky2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

pod2utils = { path = "../pod2utils" }
