[package]
name = "craft-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.2.0", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
anyhow = { workspace = true }
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread", "time", "signal", "net"] }
tokio-util = "0.7"
axum = "0.8.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"], optional = true }

[features]
default = []
proxy = ["reqwest"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "craft-mcp-mock"
path = "src/bin/mock_server.rs"

[[bin]]
name = "craft-mcp-stdio"
path = "src/bin/mock_stdio.rs"

[[bin]]
name = "bitcraft-mcp-proxy"
path = "src/bin/proxy_stdio.rs"
required-features = ["proxy"]
