[package]
name = "dobj-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "1.2.0", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
anyhow = { workspace = true }
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread", "time", "signal", "net"] }
tokio-util = "0.7"
axum = "0.8.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"], optional = true }
wire-types = { workspace = true, features = ["schemars"] }

[features]
default = []
proxy = ["reqwest"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "dobj-mcp-mock"
path = "src/bin/mock_server.rs"

[[bin]]
name = "dobj-mcp-stdio"
path = "src/bin/mock_stdio.rs"

[[bin]]
name = "dobj-mcp-proxy"
path = "src/bin/proxy_stdio.rs"
required-features = ["proxy"]
