[package]
name = "message-board"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
base64 = "0.22.1"
