[package]
name = "pexe"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pexe"
path = "src/bin/pexe.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
toml_edit = "0.23"
hex = { workspace = true }
pod2 = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
sdk = { path = "../sdk" }
txlib = { path = "../txlib" }
vdfpod = { path = "../intro_pods/vdfpod" }
lt_eq_u256_pod = { path = "../intro_pods/lt_eq_u256_pod" }
dirs = "6.0.0"
clap = { version = "4", features = ["derive"] }
