[package]
name = "plugin_host"
version = "0.1.0"
edition = "2024"

[dependencies]
plugin_api = { path = "../plugin_api" }
craft_sdk = { path = "../craft_sdk" }
pod2 = { workspace = true }
pod2utils = { path = "../pod2utils" }
vdfpod = { path = "../intro_pods/vdfpod" }
lt_eq_u256_pod = { path = "../intro_pods/lt_eq_u256_pod" }
hex = { workspace = true }
extism = "1.4"
anyhow = { workspace = true }
serde_json = { workspace = true }
