[package]
name = "pod2utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
pod2 = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
plonky2 = { workspace = true }
rand = { workspace = true }
