[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
alloy = { workspace = true  }
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
base64 = "0.22.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
common = { path = "../common" }
wire-types = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
url = { version = "2.3.1" }

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
tower = "0.5"
pod2 = { workspace = true }
