[package]
name = "synchronizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
dotenvy = "0.15.7"
alloy = { version = "1.2.1", features = [
    "eips",
    "full",
    "json-rpc",
    "hyper", #
    "transport-http",
    "signer-local",
    "rpc-client",
    "rpc-types-beacon"
] }
tokio = "1.48.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
tracing = "0.1.40"
dotenv = "0.15.0"
sha2 = "0.10.8"
rand = "0.8"
bincode = "1.3.3"
thiserror = "1.0.40"
url = { version = "2.3.1", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-eventsource = "0.6.0"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.42"
minicbor-serde = { version = "0.6.1", features = ["std"] }