[package]
name = "synchronizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
dotenvy = "0.15.7"
alloy = { workspace = true  }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "net", "signal", "sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
hex = "0.4.3"
tracing = "0.1.40"
thiserror = "1.0.40"
url = { version = "2.3.1", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-eventsource = "0.6.0"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.42"
axum = "0.8.6"
futures-util = "0.3.31"
rocksdb = "0.23.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
common = { path = "../common" }
txlib-core = { path = "../txlib-core" }
tempfile = "3"

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
