[package]
name = "txlib-core"
version = "0.1.0"
edition = "2024"

# Shared between the risc0 guest (no_std) and host code (synchronizer / driver).
# Defines the SHA-256 commitment scheme, Tx / StateRoot / Object data types,
# nullifier derivation, sparse Merkle tree verification, and the GuestInput /
# GuestJournal ABI.
#
# `host` adds std + tree-building helpers used by the synchronizer.
# Default has no host dependencies so a guest crate can depend on it directly.

[features]
default = ["host"]
host = ["std", "dep:hex"]
std = ["sha2/std", "borsh/std", "serde/std"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
borsh = { version = "1.5", default-features = false, features = ["derive"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
hex = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
