[package]
name = "txlib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
pod2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
plonky2 = { workspace = true }
pod2utils = { path = "../pod2utils" }

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
