[package]
name = "app-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "app-gui"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
hex = "0.4"
notify = "6"
rfd = "0.14"
tokio = { version = "1", features = ["net"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
env_logger = { workspace = true }

# New stack
common = { path = "../../common" }
driver = { path = "../../driver" }
txlib-core = { path = "../../txlib-core" }
craft-actions = { path = "../../craft-actions" }
