[package]
name = "pexe"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pexe"
path = "src/bin/pexe.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
toml_edit = "0.23"
hex = { workspace = true }
pod2 = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
sdk = { path = "../sdk" }
txlib = { path = "../txlib" }
vdfpod = { path = "../intro-pods/vdfpod" }
lt-eq-u256-pod = { path = "../intro-pods/lt-eq-u256-pod" }
pod2utils = { path = "../pod2utils" }
dirs = "6.0.0"
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
flate2 = "1"
base64 = "0.22"
