[package]
name = "wire-types"
version = "0.1.0"
edition = "2024"

# Pure-data types that cross process boundaries (HTTP body, MCP tool
# param, SSE event, CLI arg). No logic that needs ZK / chain access —
# keep this dependency-light so `cli` and `mcp` can use it without
# pulling in the driver's heavy deps (pod2, plonky2, rocksdb).

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "1", optional = true }
# `chain` feature only — embeds a pod2 MerkleProof in two synchronizer
# response types. Server code and the driver enable this; cli/mcp don't.
pod2 = { workspace = true, optional = true }

[features]
default = []
schemars = ["dep:schemars"]
# Opt-in extension that adds proof-bearing synchronizer response types
# (SourceTxProofResponse, GroundingWitnessResponse). Pulls pod2 — heavy
# Rust dep, but cross-platform (no C deps), unlike synchronizer's rocksdb.
chain = ["dep:pod2"]
